# kodegen-tools-introspection

./: Cargo.toml  README.md
examples/: introspection_demo.rs
examples/common/: mod.rs
src/: get_recent_tool_calls.rs  get_usage_stats.rs  inspect_tool_calls.rs  inspect_usage_stats.rs  lib.rs  main.rs  usage_tracker.rs
