[package]
name = "kodegen_tools_introspection"
version = "0.3.2"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-tools-introspection"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"

[package.metadata.bundle]
identifier = "ai.kodegen.kodegen_tools_introspection"
publisher = "KODEGEN.ᴀɪ"
copyright = "Copyright © 2025"
short_description = "Memory-efficient, Blazing-Fast, MCP tools for code generation agents."

[package.metadata.bundle.category]
linux = "Development"
macos = "public.app-category.developer-tools"


[dependencies]
kodegen_mcp_tool = { version = "0.3" }
kodegen_mcp_schema = { version = "0.3" }
kodegen_config_manager = { version = "0.3" }
kodegen_utils = { version = "0.3" }
kodegen_server_http = { version = "0.3" }

# MCP SDK - for Tool implementation
rmcp = { version = "0.9", features = ["client", "schemars", "server"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation
schemars = "1"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# TLS
rustls = "0.23"

[dev-dependencies]
kodegen_mcp_client = { version = "0.3" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "kodegen_tools_introspection"
path = "src/lib.rs"

[[bin]]
name = "kodegen-introspection"
path = "src/main.rs"
